adjust z-index and width of toolbars to prevent overlap

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -10238,6 +10238,8 @@ hr.thin.form-divider {
 }
 
 .file-rep-index-toolbar {
+  z-index: 1;
+  width: fit-content; //stop toolbar from blocking show/search on the right
   .ticket-owner-button {
     margin: 0;
   }
@@ -11574,6 +11576,8 @@ input[type="radio"].resolution_radio_button {
 }
 // webrep and webcat toolbars - prevent breaking/wrapping of the buttons
 #webrep-index-toolbar {
+  z-index: 1;
+  width: fit-content; //stop toolbar from blocking show/search on the right
   .toolbar-button .toolbar-button-text {
     display: none;
   }
